--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,26 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+/* Navbar */
+.nav {
+  box-shadow: 0 5.439px 40.792px 0 rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(11.897689819335938px);
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@media (width >= 64rem) {
+  .nav {
+    box-shadow: none;
+    backdrop-filter: none;
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@font-face {
+  font-family: 'Unageo';
+  src: url('/unageo.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+.unageo{
+  font-family: 'Unageo', sans-serif;
 }
